fix: Skip mandatory data value validation for UPDATE [DHIS2-17560]